# MakeTestsApp

./: .gitignore  README.md
MakeTestsApp/: dockerfile  main.py  pyproject.toml
MakeTestsApp/core/apps/tests/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  querysets.py  services.py  urls.py  views.py
MakeTestsApp/core/apps/tests/static/tests/css/: styles.css  test_edit.css  test_result.css  test_run.css  test_view.css  tests_all.css
MakeTestsApp/core/apps/tests/static/tests/js/: test_edit.js  tests_all.js
MakeTestsApp/core/apps/tests/templates/tests/: add_test.html  answer_block.html  base.html  question_block.html  test_edit.html  test_result.html  test_run.html  test_view.html  tests_all.html
MakeTestsApp/core/apps/users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
MakeTestsApp/core/apps/users/static/users/css/: login.css  password_change.css  profile.css  registration.css
MakeTestsApp/core/apps/users/static/users/js/: profile.js
MakeTestsApp/core/apps/users/templates/users/: login.html  password_change.html  password_change_done.html  profile.html  registration.html
MakeTestsApp/core/project/: settings.py  urls.py
MakeTestsApp/core/services/: context_processors.py
MakeTestsApp/docker_compose/: docker-compose.yml
